Refactored controllers and models